<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.greenyun.FanControl.ControlActivity">

  <TextView
  android:id="@+id/textTemp"
  android:layout_width="130dp"
  android:layout_height="130dp"
  android:background="@drawable/circle_text_shape"
  android:gravity="center"
  android:layout_marginBottom="15dp"
  android:layout_marginTop="15dp"
  android:text="@string/tips_temp"
  android:textAlignment="gravity"
  app:layout_constraintBottom_toBottomOf="parent"
  app:layout_constraintLeft_toLeftOf="parent"
  app:layout_constraintRight_toRightOf="parent"
  app:layout_constraintTop_toTopOf="parent"
  app:layout_constraintHorizontal_bias=".1"
  app:layout_constraintVertical_bias=".15"/>

  <TextView
    android:id="@+id/textSpeed"
    android:layout_width="130dp"
    android:layout_height="130dp"
    android:background="@drawable/circle_text_shape"
    android:gravity="center"
    android:text="@string/tips_speed"
    android:textAlignment="gravity"
    app:layout_constraintBottom_toBottomOf="@id/textTemp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@id/textTemp"
    app:layout_constraintHorizontal_bias=".9"/>

  <Button
    android:id="@+id/btnAM"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tips_am"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <Button
    android:id="@+id/btnDown"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tips_down"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="@id/textTemp"
    app:layout_constraintRight_toRightOf="@id/textTemp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias=".7"/>

  <Button
    android:id="@+id/btnUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tips_up"
    app:layout_constraintBottom_toBottomOf="@id/btnDown"
    app:layout_constraintLeft_toLeftOf="@id/textSpeed"
    app:layout_constraintRight_toRightOf="@id/textSpeed"
    app:layout_constraintTop_toTopOf="@id/btnDown"/>


</android.support.constraint.ConstraintLayout>
