<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.greenyun.FanControl.BtConnectActivity">

  <android.support.v7.widget.SwitchCompat
    android:id="@+id/switchBluetooth"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:text="@string/switch_bluetooth"
    android:textSize="25sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.03"
    app:switchMinWidth="50dp"/>

  <TextView
    android:id="@+id/textDeviceTips"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:textSize="23sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/switchBluetooth"/>

  <TextView
    android:id="@+id/textDeviceList"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="#f0f0f0"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:paddingEnd="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingStart="10dp"
    android:text="@string/tips_device_list"
    android:textColor="@color/colorAccent"
    android:textSize="20sp"
    android:textStyle="bold"
    android:visibility="invisible"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textDeviceTips"/>

  <TextView
    android:id="@+id/textScanning"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:gravity="end"
    android:layout_marginEnd="25dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="25dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:text="@string/tips_scanning"
    android:textAlignment="gravity"
    android:textColor="@color/colorAccent"
    android:textSize="20sp"
    android:visibility="invisible"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textDeviceTips"/>

  <Button
    android:id="@+id/btnRefresh"
    android:layout_width="0dp"
    android:layout_height="29sp"
    android:background="@android:color/transparent"
    android:gravity="end"
    android:layout_marginEnd="25dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="25dp"
    android:layout_marginStart="20dp"
    android:text="@string/tips_refresh"
    android:textAlignment="gravity"
    android:textColor="@color/colorAccent"
    android:textSize="20sp"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="@id/textDeviceList"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

  <ListView
    android:id="@+id/listBluetoothDevice"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="40dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="0dp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/textDeviceList"/>

</android.support.constraint.ConstraintLayout>
